--- a/BookStore_Mock_Project/BookStore_Mock_Project.csproj
+++ b/BookStore_Mock_Project/BookStore_Mock_Project.csproj
@@ -28,6 +28,7 @@
     <Folder Include="Pages\Admin\Users_Page\" />
     <Folder Include="Pages\Admin\Orders_Page\" />
     <Folder Include="Pages\User\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
   <ItemGroup>
