Unfinished book/category

--- a/BookStore_Mock_Project/BookStore_Mock_Project.csproj
+++ b/BookStore_Mock_Project/BookStore_Mock_Project.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\img_logo\open-book.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Pages\img_logo\open-book.png">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.17">
       <PrivateAssets>all</PrivateAssets>
